[package]
name = "create-neon"
version = "0.1.0"
authors = ["Dave Herman <david.herman@gmail.com>"]
description = "Script to create Neon projects"
readme = "README.md"
homepage = "https://www.neon-bindings.com"
repository = "https://github.com/neon-bindings/neon"
license = "MIT/Apache-2.0"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.6"

[dependencies]
structopt = "0.3"

[dependencies.neon]
version = "0.6"
default-features = false
features = ["napi-runtime"]
